--- a/testnotes-client/package.json
+++ b/testnotes-client/package.json
@@ -16,7 +16,8 @@
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "winston": "^3.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
